@@ -8,6 +8,8 @@ v0.10.0 (WIP):
 
     BUGFIX: Canvas: Ensure SentinelDrawCallback cleanup (#255)
 
+    BUGFIX: Editor: Don't call Reasume/Suspend on invisible canvas (#255)
+
 
 v0.9.2 (2023-09-01):
 
